<resources>
    <string name="app_name">Paws Live Wallpaper</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Colors</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_share">Share</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Animation</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_rate">Rate This App 5-Stars!</string>
    <string name="pref_header_contact_developer">Contact Developer</string>
    <!-- Color Preference Screen Keys-->
    <string name="pref_color_color_one">color_one</string>
    <string name="pref_color_color_two">color_two</string>
    <string name="pref_color_color_three">color_three</string>
    <string name="pref_color_color_four">color_four</string>
    <string name="pref_color_color_five">color_five</string>
    <string name="pref_color_color_six">color_six</string>
    <string name="pref_color_color_seven">color_seven</string>
    <string name="pref_color_color_custom">color_custom</string>
    <string name="pref_color_color_custom_value">color_custom_value</string>
    <!-- Animation Preference Screen Keys-->
    <string name="pref_animation_paw_prints_key">paw_prints_key</string>
    <string name="pref_animation_opacity_key">opacity_key</string>
    <string name="pref_animation_animation_speed_key">animation_speed_key</string>

    <string-array name="pref_animation_opacity">
        <item>Low</item>
        <item>Medium (Default)</item>
        <item>High</item>
    </string-array>
    <string-array name="pref_animation_opacity_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_animation_speed">
        <item>Turtle</item>
        <item>Rabbit (Default)</item>
        <item>Cheetah</item>
    </string-array>
    <string-array name="pref_animation_speed_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
