<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Animation speed">
        <ListPreference
            android:dialogTitle="Select New Opacity"
            android:entries="@array/pref_animation_speed"
            android:entryValues="@array/pref_animation_speed_values"
            android:key="@string/pref_animation_animation_speed_key"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Select"
            android:summary="Click to change the animation speed"></ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Opacity">
        <ListPreference
            android:dialogTitle="Select New Opacity"
            android:entries="@array/pref_animation_opacity"
            android:entryValues="@array/pref_animation_opacity_values"
            android:key="@string/pref_animation_opacity_key"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Select"
            android:summary="Click to change the opacity"></ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Show Paw Prints on touch">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_animation_paw_prints_key"
            android:summaryOff="Paw prints are disabled"
            android:summaryOn="Paw prints are enabled"></CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>
